browser-app/src/index.css
/* ... */
/*Custom col for items grid view*/
.custom-col {
  padding-left: 12px;
  padding-right: 12px;
  /*margin-bottom: 15px;*/
}



/*FOR TEST*/
.test-header {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  height: 70px;
  z-index: 1030;
  background-color: white;
  /*border-bottom: 1px solid #DEE2E6;*/
  box-shadow: rgba(154, 161, 171, 0.15) 0px 0px 35px 0px;
  /*box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px 0;*/
}
.test-sidebar {
  position: fixed;
  top: 70px;
  left: 0;
  width: 260px;
  min-width: 260px;
  max-height: calc(100vh - 70px);
  min-height: calc(100vh - 70px);
  overflow: auto;
  z-index: 1020;
  background-color: #313A46;
  scrollbar-gutter: stable;
  /*border-right: 1px solid #DEE2E6;*/
}
.test-content-outer {
  position: fixed;
  top: 70px;
  left: 260px;
  min-height: 100vh;
  width: calc(100vw - 260px);
}
.test-content-inner {
  background-color: lightgoldenrodyellow;
  padding: 40px 40px 40px 40px;
  max-height: calc(100vh - 70px);
  min-height: calc(100vh - 70px);
  overflow-y: auto;
}




/*Wrappers*/
.custom-items-with-pagination-and-toolbar-wrapper {
  background-color: #FAFBFE;
  padding: 0px 12px 40px 12px;
  max-height: calc(100vh - 70px);
  min-height: calc(100vh - 70px);
  overflow-y: auto;
}
.inner {
  padding-top: 30px;
  min-height: calc(100vh - 70px - 0px - 40px);
  display: flex;
  flex-direction: column;
}
.custom-toolbar-wrapper {
  margin-bottom: 26px;
}
.custom-items-wrapper {
  margin-bottom: 4px;
  /*padding: 32px 7px 16px 8px;*/
  /*background-color: lightblue;*/
}
.custom-pagination-wrapper {
  min-height: 38px;
  /*background-color: green;*/
  flex-grow: 3;
  position: relative;
  /*margin-bottom: 20px;*/
}
.custom-pagination-wrapper > div {
  position: absolute;
  bottom: 0;
}
.custom-scroll-top-div {
  position: fixed;
  bottom: 40px;
  right: 41px;
}
.custom-landing-wrapper,
.custom-not-found-wrapper {
  height: 100vh;
}
.custom-not-found-wrapper {
  background: linear-gradient(to right, #fc00ff, #00dbde);
}

/*Custom scrollbar*/
/*For Sidebar*/
.test-sidebar::-webkit-scrollbar {
  width: 10px;
}
/*Firefox*/
.test-sidebar {
  scrollbar-width: 10px;
  scrollbar-color: #69747F transparent;
}
.test-sidebar::-webkit-scrollbar-track {
  border-radius: 5px;
}
.test-sidebar::-webkit-scrollbar-thumb {
  border-radius: 5px;
  border: 2px solid transparent;
  background-clip: content-box;
  /*background-color: transparent;*/
  background-color: #69747F;
}
.test-sidebar:hover::-webkit-scrollbar-thumb {
  /*background-color: #69747F;*/
}
/*For content*/
.custom-items-with-pagination-and-toolbar-wrapper::-webkit-scrollbar {
  width: 12px;
}
/*Firefox*/
.custom-items-with-pagination-and-toolbar-wrapper {
  scrollbar-width: 12px;
  scrollbar-color: #69747F transparent;
}
.custom-items-with-pagination-and-toolbar-wrapper::-webkit-scrollbar-track {
  border-radius: 6px;
}
.custom-items-with-pagination-and-toolbar-wrapper::-webkit-scrollbar-thumb {
  border-radius: 6px;
  border: 2px solid transparent;
  background-clip: content-box;
  background-color: #69747F;
}

/*ImageSlider*/
/*slick-dots(ul)*/
.slick-dots {
  position: absolute;
  bottom: 6px;
  left: 7px;
  width: fit-content;
  background-color: rgba(0,0,0,0.5);
  border-radius: 3px;
  font-size: 11px;
  padding-left: 2px;
  padding-right: 2px;
  cursor: default;
  z-index: 21;
}
.slick-dots li {
  width: 14px;
  height: 19px;
  margin: 0;
}
.slick-dots li button {
  width: 14px;
  height: 19px;
  padding: 0;
  font-size: inherit;
}
.slick-dots li button::before,
.slick-dots li.slick-active button:before {
  width: 10px;
  margin-top: 3px;
  margin-bottom: 4px;
  margin-left: 2px;
  margin-right: 2px;
  height: 12px;
  background-color: transparent;
  content: "";
  border: 1px solid white;
  border-radius: 2px;
  transition: all .2s ease-in-out;
}
.slick-dots li button::before {
  opacity: 1;
}
.slick-dots li.slick-active button:before {
  background-color: limegreen;
  border: 1px solid white;
  opacity: 1;
}
.slick-dots li button:hover:before,
.slick-dots li button:focus:before {
  border: 1px solid #ccc;
  opacity: 1;
}
.slick-dots li.slick-active button:hover:before,
.slick-dots li.slick-active button:focus:before {
  background-color: limegreen;
  border: 1px solid white;
  opacity: 1;
}

/*Spinner*/
.spinner-overlay,
.request-spinner-overlay {
  position: fixed;
  top: 0;
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background-color: white;
  z-index: 2030;
  transition: visibility 0.3s, opacity 0.3s linear;
}
.request-spinner-overlay {
  top: 70px;
  width: calc(100vw - 260px);
  height: calc(100vh - 70px);
  transition: none;
  background-color: #FAFBFE;
}
.visible {
  visibility: visible;
  opacity: 1;
}
.hidden {
  visibility: hidden;
  opacity: 0;
}
.spinner-wrapper {
  width: 130px;
  height: 130px;
  position: relative;
}
.spinner-div,
.request-spinner-div {
  width: 116px;
  height: 116px;
  background-color: white;
  position: absolute;
  top: 7px;
  left: 7px;
  border-top: 4px solid lime;
  border-left: 4px solid transparent;
  border-radius: 50%;
  animation: Spin 1s linear infinite;
}
.request-spinner-div {
  display: none;
  border-top: 4px solid lime;
  background-color: #FAFBFE;
  animation: Spin .5s linear infinite;
}
.spinner-img {
  width: 100px;
  height: 100px;
  position: absolute;
  top: 15px;
  left: 15px;
  border-radius: 50%;
}
.spinner-text {
  font-weight: 400;
  margin-bottom: 1.5rem;
  background-image: linear-gradient(
    90deg,
    rgba(0,0,0,1), rgba(0,0,0,1), rgba(0,0,0,1),
    rgba(0,0,0,1), rgba(0,0,0,1), rgba(0,0,0,1),
    lime
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  animation: Color 1s linear;
}
@keyframes Spin {
  from {
    transform: rotate(360deg);
  }
  to {
    transform: rotate(0deg);
  }
}
@keyframes Color{
  to {
    background-position: 7vh;
  }
}

/*Pagination*/
.page-link {
  cursor: pointer;
  color: #6c757d;
}
/* ... */

